fix(layout): fix overflow layout

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -32,7 +32,7 @@
 
 @media screen and (max-width: 767px) {
   .navbar-container {
-    @apply px-2;
+    @apply px-2 box-border;
   }
   .navbar-menu {
     @apply hidden top-16 right-4 bg-gray-300 rounded w-[80vw] max-w-80 shadow-xl;
