--- a/src/pages/TransactionListPage/TransactionListPage.css
+++ b/src/pages/TransactionListPage/TransactionListPage.css
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 767px) {
   .transaction-page-wrapper {
-    @apply mx-2 box-border;
+    @apply px-2 box-border;
   }
 }
